k8s/flask-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
  labels:
    app: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      nodeName: $NODE_NAME
      containers:
        - name: flask-app
          image: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
